# prior_map_slam

./: .gitignore  README.md
cmake_modules/: FindG2O.cmake  FindG2O_FRONTEND.cmake
dataset/: priscilla-map-part.pbm  priscilla-map-part_clean2_mini.pgm  priscilla-map-unexplored_part2.pbm
map_manager/: CMakeLists.txt  CMakeLists.txt~  readme.txt
map_manager/graph2d_processing/: CMakeLists.txt  bm_se2.h  graph2d_get_things.cpp
map_manager/graph2d_processing/dataset/: graphSE2_test_mapper.g2o
map_manager/map_matching/: CMakeLists.txt  CMakeLists.txt~  bm_se3.h  graph_add_constraints.cpp  readme.txt  readme.txt~  test_homographyRansac.cpp  utility.cpp  utility.h
map_manager/map_matching/dataset/: angles_mod.dat~  graphSE2_test_mapper_mod.g2o  graph_gps.g2o  graph_manual.g20  map_inters_point.txt  newPoses.txt  newPoses_new.txt  odomtoMap.dat_bak
map_manager/map_matching/dataset/newtest/: graph_gps_n.g2o  graph_test_fromPwn_slam2_app.g2o  map_inters_point_manual_n.txt  newPoses_n.txt
map_manager/map_matching/dataset/useless/: graphSE2_manual_bleah.g2o
map_manager/map_processing/: CMakeLists.txt  CMakeLists.txt~  map_processing.cpp  utils.h
map_manager/map_processing/dataset/: ndt_mini.pgm  ndt_miniB.pgm  original_source_miniB.pgm  sk_mini.pgm  sk_miniB.pgm
map_manager/map_processing/dataset/priscilla_map_cleanprocess/: priscilla-map-part_clean.pbm
map_manager/map_processing/matlab/: euclidean_distance.m  find_skel_intersection.m  inters_point_manual.txt  main_skel_inters.m  octave-core  sortclasses.m  test_inters_miniB.eps  untitled.eps
other_code/dt/: dt  dt.tgz
other_code/mgridmap/: gridmap.cpp  gridmap.h
scripts/: build_all.sh  build_all.sh~  build_eigen3_2_1.sh  build_freenect.sh  build_g2o.sh  build_opencv_2_4_8.sh  build_ros_packages.sh  build_third_parties.sh  clean_all.sh  fetch_eigen3_2_1.sh  fetch_freenect.sh  fetch_g2o.sh  fetch_opencv_2_4_8.sh  fetch_third_parties.sh  install_freenect.sh  install_openni2_mine.sh  install_ubuntu_packages.sh
