INCLUDE_DIRECTORIES(${CSPARSE_INCLUDE_DIR} ${G2O_INCLUDE_DIR} ${G2O_FRONTEND_INCLUDE_DIR})

ADD_EXECUTABLE(graph2d_get_things 
		graph2d_get_things.cpp)
TARGET_LINK_LIBRARIES(graph2d_get_things
		${OpenCV_LIBS} ${G2O_TYPES_DATA} ${G2O_FRONTEND_SENSOR_DATA}
		${G2O_TYPES_SLAM2D} ${G2O_TYPES_SLAM2D_ADDONS} 
		${G2O_TYPES_SLAM3D} ${G2O_TYPES_SLAM3D_ADDONS} 
		${G2O_STUFF_LIBRARY} ${G2O_SOLVER_CSPARSE_EXTENSION} 
		${G2O_CORE_LIBRARY} ${G2O_OPENGL_HELPER_LIBRARY} ${CSPARSE_LIBRARY}
)

